# jolt_physics_ffi

./: .metadata  IMPLEMENTATION_PLAN.md  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build_jolt.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/jolt_physics_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: jolt_physics_ffi.podspec
lib/: jolt_physics_ffi.dart  jolt_physics_ffi_bindings_generated.dart
linux/: CMakeLists.txt
macos/: jolt_physics_ffi.podspec
macos/Classes/: jolt_physics_ffi.c
src/: CMakeLists.txt  jolt_physics_ffi.c
windows/: CMakeLists.txt
